--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Covid 19 Tracker</title>
+    <title>Corona Virus Tracker</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body onload="getData()">
